# example-simd

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/scalar/: distance.rs  dot_product.rs  sum.rs
src/scalar_unrolled/: distance.rs  dot_product.rs  mod.rs  sum.rs
src/simd_std/: distance.rs  dot_product.rs  sum.rs
src/simd_wide/: distance.rs  dot_product.rs  sum.rs
